# GLNSModified

./: CMakeLists.txt  MapDrawer.cpp  MapDrawer.hpp  TPP.cpp  TPP.h  arc.cpp  arc.h  canvas.cpp  canvas.h  clipper.cpp  edge.cpp  edge.h  geom.cpp  geom.hpp  heuristic.cpp  heuristic.h  main.cpp  parser.cpp  parser.h  planner.cpp  planner.h  point.cpp  point.h  poly_maps.hpp  polygon.cpp  polygon.h  set.cpp  set.h  simple_intersection.h  tour.cpp  tour.h  triangle.c  triangle.h  triangulation.cpp  triangulation.hpp  utils.cpp  utils.hpp  vertex.cpp  vertex.h
GeneratedFiles/: 100_ngons_intersect.txt  150_ngons_intersect.txt  200_ngons_intersect.txt  400_ngons_intersect.txt  4berlin52-2x2.gtsp  50_10gons.txt  50_3gons.txt  50_4gons.txt  50_5gons.txt  50_6gons.txt  50_7gons.txt  50_8gons.txt  50_9gons.txt  50_ngons_intersect.txt  dataPolygons.txt  dataTSP.txt  density_120.txt  density_160.txt  density_200.txt  density_40.txt  density_400.txt  density_80.txt  potholes-2.txt  potholes-3.txt  potholes-4.txt  potholes-6.txt  potholes-8.txt  potholes-inf.txt  potholes100.txt  potholes200.txt  potholes25.txt  potholes30.txt  potholes35.txt  potholes40.txt  potholes45.txt  potholes50.txt  potholes55.txt  potholes60.txt  potholes65.txt  potholes70.txt  (+5 more)
